[package]
name = "kitty_proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1", features = ["std"] }
log = "0.4.14"
pretty_env_logger = "0.5.0"
serde = { version = "1.0.193", features = ["serde_derive"] }
snafu = "0.7.0"
thiserror = "1.0.30"
tokio = { version = "1.15.0", features = ["full"] }
prost = "0.7"
prost-derive = "0.7"
cidr-utils = "0.6.1"
cidr = { version = "0.2.2", features = ["bitstring", "serde"] }
regex = "1.10.2"
addr = "0.15.6"
url = { version = "2.5.0", features = ["serde"] }
hyper = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
native-tls = {version = "0.2.11", features = ["alpn"]}
tokio-native-tls = "0.3.1"


[build-dependencies]
prost = "0.7"
prost-build = "0.7"
