[package]
name = "kitty_proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1", features = ["std"] }
log = "0.4.14"
pretty_env_logger = "0.5.0"
serde = { version = "1.0.193", features = ["serde_derive"] }
snafu = "0.7.0"
thiserror = "1.0.30"
tokio = { version = "1.15.0", features = ["full"] }
prost = "0.7"
prost-derive = "0.7"
cidr-utils = "0.6.1"
cidr = { version = "0.2.2", features = ["bitstring", "serde"] }
regex = "1.10.2"
addr = "0.15.6"
url = { version = "2.5.0", features = ["serde"] }
# hyper = {version="0.14.23", features=["full"]}
hyper-rustls = { version = "0.23.2", features = [
    "http1",
    "logging",
    "tls12",
    "webpki-tokio",
] }
moka = { version = "0.9.6", features = ["future"] }
openssl = { version = "0.10.60", features = ["vendored"] }
tokio-tungstenite = { version = "0.20.1", features = [
    "rustls-tls-webpki-roots",
] }
# http-body-util = "0.1.1"
# hyper-util = "0.1.3"

hyper = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }

# hyper = { version = "1", features = ["full"] }
# tokio = { version = "1", features = ["full"] }
# http-body-util = "0.1"
# hyper-util = { version = "0.1", features = ["full"] }

rustls = { version = "0.23", default-features = false, features = ["std"] }
pki-types = { package = "rustls-pki-types", version = "1" }
webpki-roots = "0.26.1"
tokio-rustls = "0.25.0"

bstr = "1.2.0"
bytes = "1.4.0"
http = "0.2.8"
hyper-tungstenite = "0.13.0"

[build-dependencies]
prost = "0.7"
prost-build = "0.7"
